# starfinder

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  setup.cfg
docs/: index.md  installation.md
docs/notebooks/: background.ipynb  clustering.ipynb  getting_started.ipynb
docs/source/: conf.py  index.rst
examples/: Getting_started.ipynb
examples/data/: ngc744-0001_60s_v.fit
src/starfinder/: __init__.py  cluster.py  logger.py  starfield.py
