[metadata]
name = starfinder
version = 0.0.1
author = Glen Cowan
author_email = glen.cowan@rhul.ac.uk
description = A package to enable data analysis of fits files
long_description = file: README.md
long_description_content_type = text/markdown
url = TBD
project_urls =
    Bug Tracker = TBD
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
